Expand main column and fix fork me z-index

--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,5 +1,5 @@
 $sidebar-width: 190px;
-$main-width:    752px;
+$main-width:    900px;
 $main-top-margin: 30px;
 $header-height:   100px;
 $method-margin: 20px;
